--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "chess.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node server/index.js",
+    "build": "webpack",
+    "dev-server": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,19 @@
   },
   "homepage": "https://github.com/jijohn-dev/chessJS#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "express": "^4.17.1",
+    "live-server": "^1.2.1",
+    "qs": "^6.9.6",
     "socket.io": "^3.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "nodemon": "^2.0.7",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0"
   }
 }
