--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "chess.js",
   "scripts": {
-    "serve": "node server/index.js",
+    "serve": "node server/server.js",
     "build": "webpack",
-    "dev-server": "nodemon server/index.js"
+    "dev-server": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
